--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,6 @@
 
     <%= yield %>
 
-    <%= render "layouts/user_actions_modal.html"%>
+    <%= render "layouts/user_actions_modal"%>
   </body>
 </html>
