--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,6 +3,10 @@
     <h1>Editar seu perfil</h1>
 
     <div class="field">
+      <%= form.file_field :avatar %>
+    </div>
+
+    <div class="field">
       <%= form.text_field :name, placeholder: "Nome" %>
     </div>
 
